:heavy_plus_sign: Add Scss dependency

--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,4 @@
 # Take this file, replaces it's name with ".env" and changes the values.
 
 OMDb_API_KEY =Your API_KEY
-JIKAN_API_KEY=Your API_KEY
+JIKAN_API=Your API
